--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,8 @@
 run:
   timeout: 1m
-  skip-dirs:
+issues:
+  exclude-dirs:
     - data
-    - api/gen
     - lib/bio/slow5/svb
 linters:
   enable:
