--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,12 +34,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Specify the Python version you're using
+        python-version: '3.10'  # Specify the Python version you're using
+
+    - name: Build wheel
+      working-directory: ./py
+      run: |
+        pip install wheel packaging setuptools cffi
+        python setup.py bdist_wheel --plat-name manylinux2014_x86_64
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cffi
         pip install pdoc3  # Install pdoc3
         pip install -e ./py  # Install your package in editable mode
 
