--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -53,7 +53,7 @@ jobs:
         python -m venv test_env
         source test_env/bin/activate
         pip install ./py/dist/*.whl
-        python -c "from dnadesign import parser; print('Library loaded successfully')"
+        python -c "from dnadesign import parsers; print('Library loaded successfully')"
         pip install pdoc
         pdoc --html --output-dir docs ./py/dnadesign
 
