--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -65,7 +65,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: './docs/dnadesign'  # Adjust this to your build output directory
+        path: './docs'  # Adjust this to your build output directory
 
     - name: Deploy to GitHub Pages
       id: deployment
