--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,8 @@ jobs:
         fi
 
     - name: Test wheel in fresh environment
+      #GitHub Actions runners are typically x86_64, even when you're building for ARM64
+      if: (runner.os == 'Linux' && matrix.arch == 'amd64') || (runner.os == 'macOS' && matrix.arch == runner.arch)
       run: |
         python -m venv test_env
         source test_env/bin/activate
